# rtt-env

./: .gitattributes  .gitignore  Kconfig  README.md  archive.py  env.ps1  env.py  env.sh  kconfig.py  package.py  pkgsdb.py  pyproject.toml  reinstall.sh  reinstallenv.ps1  reinstallenv.sh  setting.json  setup.py  statistics.py
cmds/: __init__.py  cmd_menuconfig.py  cmd_sdk.py  cmd_system.py
cmds/cmd_package/: __init__.py  cmd_package_printenv.py  cmd_package_update.py  cmd_package_upgrade.py  cmd_package_wizard.py
manifests/: README.md
program/: README.md
scripts/: archive.py  env.py  env.sh  package.py  pkgsdb.py  pyproject.toml  setup.py  statistics.py  touch_env.py
scripts/cmds/: cmd_menuconfig.py  cmd_sdk.py  cmd_system.py
scripts/cmds/cmd_package/: __init__.py  cmd_package_list.py  cmd_package_printenv.py  cmd_package_update.py  cmd_package_upgrade.py  cmd_package_utils.py
test/: env.ps1  test.bat
toolchain/scripts/: archive.py
toolchain/scripts/cmds/: cmd_menuconfig.py
