[project]
name = "rtenv"
authors = [
    { name = "RT-Thread Development Team", email = "rt-thread@rt-thread.org" },
]
description = 'RT-Thread Env'
readme = "README.md"
keywords = ["rt-thread", "env"]
license = { text = "GPL-V2" }

version = "0.0.2"
requires-python = ">=3.6"
dependencies = [
    'SCons>=4.0.0',
    'requests',
    'psutil',
    'tqdm',
    'kconfiglib',
    'windows-curses; platform_system=="Windows"',
]

[project.scripts]
rt-env = 'rtenv.env:main'
menuconfig = 'rtenv.env:menuconfig'
pkgs = 'rtenv.env:pkgs'
sdk = 'rtenv.env:sdk'
system = 'rtenv.env:system'

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
# include-package-data = true
# directory containing all the packages
package-dir = { "" = "src" }


[tool.setuptools.packages.find]
where = ["src"]


[tool.black]
line-length = 128
skip-string-normalization = true
# use-tabs = false
